# pyscaffoldext-travis

./: .cirrus.yml  .coveragerc  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
src/pyscaffoldext/travis/: __init__.py  extension.py
tests/: helpers.py  test_custom_extension.py  test_travis.py
